--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">My Restaurant</string>
+    <string name="myrestaurants">MyRestaurants</string>
+    <string name="find_restaurants">Find Restaurants</string>
 </resources>
